# codespeak-playground

./: README.md  pyproject.toml
app/: main.py
