[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["nateshirley <nshirley22@gmail.com>"]
readme = "README.md"
packages = [{include = "codespeak_playground"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
codespeak = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
